refactor: DownloadJob to URI